--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_summary">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.spake.invent.ui.home.HomeFragment"
+        android:id="@+id/navigation_summary"
+        android:name="com.spake.invent.ui.items.ItemsFragment"
         android:label="@string/title_summary"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_items" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.spake.invent.ui.dashboard.DashboardFragment"
+        android:id="@+id/navigation_bags"
+        android:name="com.spake.invent.ui.bags.BagsFragment"
         android:label="@string/title_bags"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_items" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.spake.invent.ui.notifications.NotificationsFragment"
+        android:id="@+id/navigation_lockers"
+        android:name="com.spake.invent.ui.lockers.LockersFragment"
         android:label="@string/title_lockers"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_items" />
 </navigation>
