--- a/app/src/main/res/layout/item_list_item.xml
+++ b/app/src/main/res/layout/item_list_item.xml
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="24dp"
-                android:fontFamily="monospace"
+                android:fontFamily="@font/baloo"
                 android:text="Name"
                 android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
@@ -43,7 +43,7 @@
                 android:id="@+id/item_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="monospace"
+                android:fontFamily="@font/roboto_bold"
                 android:text="Description"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@+id/item_name"
