--- a/app/src/main/res/layout/content_scanned_barcode.xml
+++ b/app/src/main/res/layout/content_scanned_barcode.xml
@@ -9,14 +9,14 @@
 
     <Button
         android:id="@+id/btnAction"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="399dp"
+        android:layout_height="92dp"
         android:layout_alignParentBottom="true"
+        android:fontFamily="@font/roboto_bold"
         android:text="Dodaj przedmiot"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <SurfaceView
@@ -39,11 +39,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="96dp"
         android:text="Nie wykryto kodu kreskowego"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/btnAction"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
