- edycje kategorii oraz przedmiotow (działające) - stringi zakodowane w .xml - poprawa wyglądu przycisku dodawania

--- a/app/src/main/res/layout/activity_new_item.xml
+++ b/app/src/main/res/layout/activity_new_item.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="46dp"
         android:layout_marginTop="134dp"
         android:ems="10"
-        android:hint="Nazwa przedmiotu"
+        android:hint="@string/name"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/txtDescription"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +29,7 @@
         android:layout_marginStart="62dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/roboto_bold"
-        android:text="Zapisz"
+        android:text="@string/save"
         app:layout_constraintEnd_toEndOf="@+id/txtName"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="@+id/txtDescription"
@@ -51,7 +51,7 @@
         android:layout_height="150dp"
         android:layout_marginTop="196dp"
         android:ems="10"
-        android:hint="Opis"
+        android:hint="@string/description"
         android:inputType="textMultiLine"
         app:layout_constraintStart_toStartOf="@+id/txtName"
         app:layout_constraintTop_toTopOf="parent" />
