--- a/app/src/main/res/layout/content_scanned_barcode.xml
+++ b/app/src/main/res/layout/content_scanned_barcode.xml
@@ -13,7 +13,7 @@
         android:layout_height="92dp"
         android:layout_alignParentBottom="true"
         android:fontFamily="@font/roboto_bold"
-        android:text="Dodaj przedmiot"
+        android:text="@string/add_new_item"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="96dp"
-        android:text="Nie wykryto kodu kreskowego"
+        android:text="@string/barcode_not_detected"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/btnAction"
