--- a/app/src/main/res/layout/fragment_items.xml
+++ b/app/src/main/res/layout/fragment_items.xml
@@ -25,8 +25,8 @@
         android:layout_marginBottom="36dp"
         android:layout_marginEnd="32dp"
         android:clickable="true"
-        android:src="@android:drawable/ic_menu_add"
-        app:backgroundTint="#100F0F"
+        android:src="@drawable/ic_add_black_24dp"
+        app:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
