--- a/app/src/main/res/layout/content_scanned_barcode.xml
+++ b/app/src/main/res/layout/content_scanned_barcode.xml
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="96dp"
-        android:fontFamily="@font/baloo"
+        android:fontFamily="@font/roboto_bold"
         android:text="@string/barcode_not_detected"
         android:textColor="@android:color/white"
         android:textSize="20sp"
@@ -68,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="64dp"
-        android:fontFamily="@font/baloo"
+        android:fontFamily="@font/roboto_bold"
         android:text="Miejsce przechowywania"
         android:textColor="@android:color/white"
         android:textSize="24sp"
@@ -82,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:fontFamily="@font/baloo"
+        android:fontFamily="@font/roboto_bold"
         android:text="Nazwa przedmiotu"
         android:textColor="@android:color/white"
         android:textSize="36sp"
