--- a/app/src/main/res/layout/item_list_item.xml
+++ b/app/src/main/res/layout/item_list_item.xml
@@ -25,7 +25,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.545"
-                app:srcCompat="@drawable/ic_first_aid_kit_blank" />
+                app:srcCompat="@drawable/ic_item" />
 
             <TextView
                 android:id="@+id/item_name"
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="24dp"
-                android:fontFamily="@font/baloo"
+                android:fontFamily="@font/roboto_bold"
                 android:text="Name"
                 android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
@@ -43,7 +43,7 @@
                 android:id="@+id/item_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/roboto"
                 android:text="Description"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@+id/item_name"
