--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/baloo</item>
         <item>@font/itim</item>
+        <item>@font/roboto</item>
         <item>@font/roboto_bold</item>
     </array>
 </resources>
